# Template-Py310-CA-CI-CD

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_quality.yml  python-app.yml
tests/: test_main.py
