[tool.poetry]
name = "template-py310-ca-ci-cd"
version = "0.1.0"
description = ""
authors = ["CeeBeeL <c.blervacques@free.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pyright = "^1.1.334"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
# mutmut = "^2.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"


[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]